[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello-world-server"
path = "src/server.rs"

[[bin]]
name = "hello-world-client"
path = "src/client.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ]}

[build-dependencies]
tonic-build = "0.11"